# corpus2

./: CMakeLists.txt  LICENSE.in
CMakeScripts/: FindZlibComplete.cmake
corpus2data/: ikipi.tagset  morfeusz2.tagset
corpus2mwe/: CMakeLists.txt  README
corpus2mwe/cclmwe/: CMakeLists.txt  cclmwereader.cpp  cclmwereader.h  mwemanager.cpp
corpus2mwe/cclmwe/tests/: CMakeLists.txt  cclmwe_test.cpp
corpus2mwe/swig/: cclmwereader.i
corpus2tools/: CMakeLists.txt  corpus-get  corpus-get.cpp  corpus-merge  corpus2get.cpp  tagset-tool.cpp
doc/: corpstats.py
learn_to_guess/: config.cpp  config.h  main.cpp  tree.cpp  tree.h
libcorpus2/: CMakeLists.txt  boilerplate.cpp.in  chunk.cpp  chunk.h  document.cpp  document.h  exception.cpp  exception.h  lexeme.cpp  lexeme.h  relation.cpp  relation.h  sentence.cpp  sentence.h  tag.cpp  tag.h  tagging.cpp  tagging.h  tagset.cpp  tagset.h  tagsetmanager.cpp  tagsetmanager.h  tagsetparser.cpp  tagsetparser.h  token.cpp  token.h  tokenmetadata.cpp  tokenmetadata.h  tokensource.h  typedefs.h  version.in
libcorpus2/ann/: annotatedsentence.cpp  annotatedsentence.h  channel.cpp  channel.h  iob.cpp  iob.h  view.cpp  view.h
libcorpus2/guesser/: auto_test.cpp  backwardtrie.h  backwardtrie.tpp  guesser.cpp  guesser.h  test.cpp
libcorpus2/io/: cclreader.cpp  cclreader.h  cclwriter.cpp  cclwriter.h  conllwriter.cpp  conllwriter.h  docreader.cpp  docreader.h  fastxces.cpp  fastxces.h  helpers.cpp  helpers.h  iob-chan.cpp  iob-chan.h  linewriter.cpp  nonewriter.cpp  nonewriter.h  orthwriter.cpp  orthwriter.h  pathwriter.cpp  pathwriter.h  plainreader.cpp  plainreader.h  plainwriter.cpp  plainwriter.h  premorphwriter.cpp  premorphwriter.h  reader.cpp  reader.h  relreader.cpp  relreader.h  rft.cpp  rft.h  sax.cpp  sax.h  statwriter.cpp  statwriter.h  writer.cpp  writer.h  xces.cpp  (+15 more)
libcorpus2/util/: ioformat-options.cpp  ioformat-options.h  settings.cpp  settings.h  symboldictionary.cpp  symboldictionary.h  tokentimer.cpp  tokentimer.h
libcorpus2_whole/: CMakeLists.txt  corpus.cpp  corpus.h  corpusreader.cpp  corpusreader.h  document.cpp  document.h  poliqarpdocumentreader.h  relation.cpp  relation.h  relreader.h
libcorpus2_whole/io/: baserelreader.cpp  baserelreader.h  cclrelreader.cpp  cclrelreader.h  corpusreader.cpp  corpusreader.h  docreader.cpp  docreader.h  docreaderi.h  documentcorpusreader.cpp  documentcorpusreader.h  documentreader.cpp  documentreader.h  poliqarpcorpusreader.cpp  poliqarpcorpusreader.h  poliqarpdocumentreader.cpp  poliqarpdocumentreader.h  reader_i.h  relreader.cpp  relreader.h  relwriter.cpp  relwriter.h
libpwrutils/: CMakeLists.txt  bitset.h  exception.cpp  exception.h  foreach.h  pathsearch.cpp  pathsearch.h  plugin.cpp  plugin.h  plural.cpp  plural.h  sentence.h  tokensource.h  typedefs_includes.in.h  typedefs_typedefs.in.h  util.cpp  util.h  whitespace.cpp  whitespace.h
poliqarp/: CMakeLists.txt  c2pqtest.cpp  pqclient.cpp  pqclient.h  pqreader.cpp  pqreader.h
poliqarp-library/: CMakeLists.txt
poliqarp-library/sakura/: backend-base.h  backend-interp.h  backend-meta.h  backend-orth.h  backend-tag.h  exception.h  poliqarp.c  poliqarp.h  query.c  value.h
swig/: CMakeLists.txt  Makefile  annotatedsentence.i  annotationchannel.i  annotationview.i  boost_shared_ptr.i  cclrelreader.i  chunk.i  corpus2.i  document.i  documentreader.i  exception.i  iob.i  lexeme.i  libcorpus2exception.i  libcorpusannotatedsentence.i  libcorpusannotationchannel.i  libcorpusannotationview.i  libcorpuschunk.i  libcorpuslexeme.i  libcorpussentence.i  libcorpustag.i  libcorpustagset.i  libcorpustagsetmanager.i  libcorpustoken.i  libcorpustokenreader.i  libcorpustokenwriter.i  libpwrnlperror.i  makewrapper.sh  relation.i  relationreader.i  relationwriter.i  sentence.i  tag.i  tagging.i  tagset.i  tagsetmanager.i  token.i  tokenmetadata.i  tokenreader.i  (+2 more)
tagset-tool/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  ann_basic.cpp  basic.cpp  io.cpp  ioann.cpp  main.cpp  tag_split.cpp  tagset_parse.cpp  tokenmetadata.cpp
utils/: CSVColumn.py  CSVWriter.py  chunk_eval.py  corpspace.py  corptext.py  get_held_out.pl  get_morpho.py  parfolds.py  relation_eval.py  split.pl  swapchans.pl  tagger-eval.py
